working with normal box

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "useDefineForClassFields": true,
     "sourceMap": true,
     "baseUrl": ".",
+    "isolatedModules": true,
     "types": [
       "webpack-env"
     ],
