--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^9.6.0",
+    "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
     "three": "^0.143.0",
     "vue": "^3.2.13",
