--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@vueuse/core": "^9.6.0",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
+    "jquery": "^3.6.1",
     "three": "^0.143.0",
     "vue": "^3.2.13",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.14",
     "@types/three": "^0.143.0",
     "@types/vue-router": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
@@ -27,6 +29,7 @@
     "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "serve": "^14.1.2",
     "typescript": "~4.5.5"
   }
 }
