--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "jquery": "^3.6.1",
     "three": "^0.143.0",
     "vue": "^3.2.13",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.14",
