--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "@vueuse/core": "^9.6.0",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
     "jquery": "^3.6.1",
+    "register-service-worker": "^1.7.2",
     "three": "^0.143.0",
     "vue": "^3.2.13",
     "vue-router": "^4.1.6",
@@ -25,12 +27,14 @@
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "serve": "^14.1.2",
-    "typescript": "~4.5.5"
+    "typescript": "~4.5.5",
+    "workbox-webpack-plugin": "^6.5.4"
   }
 }
