--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "serve": "^14.1.2",
-    "typescript": "~4.5.5",
-    "workbox-webpack-plugin": "^6.5.4"
+    "typescript": "~4.5.5"
   }
 }
