--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "http-server": "^14.1.1",
+    "nginx": "^1.0.8",
     "serve": "^14.1.2",
     "typescript": "~4.5.5"
   }
