--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "three": "^0.143.0",
     "vue": "^3.2.13",
     "vue-router": "^4.1.6",
-    "vue-toastification": "^2.0.0-rc.5"
+    "vue-toastification": "^2.0.0-rc.5",
+    "workbox-webpack-plugin": "^6.5.4"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.14",
