--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vueuse/core": "^9.6.0",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
+    "firebase": "^9.16.0",
     "jquery": "^3.6.1",
     "register-service-worker": "^1.7.2",
     "three": "^0.143.0",
