only deploy on master

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,9 @@
-on: [push]
-name: Linux_Container_Workflow
+on:
+  push:
+    branches:
+      - master
+
+name: Deploy Webapp
 
 jobs:
     build-and-deploy:
