final impl for exam
* create Webapp with Vue
* deploy with GH-actions and Azure
* use Firebase for authentication

Co-authored-by: Joel Merath <joel.merath.dev@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,12 +13,14 @@
     "sourceMap": true,
     "baseUrl": ".",
     "isolatedModules": true,
+    "resolveJsonModule": true,
     "types": [
       "webpack-env"
     ],
     "paths": {
       "@/*": [
-        "src/*"
+        "src/*",
+        "./*"
       ]
     },
     "lib": [
@@ -27,7 +29,9 @@
       "dom.iterable",
       "scripthost"
     ]
+
   },
+
   "include": [
     "src/**/*.ts",
     "src/**/*.tsx",
