--- a/package.json
+++ b/package.json
@@ -1,32 +1,44 @@
 {
-  "name": "hyrule-jobs",
+  "name": "Chess",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --mode development",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "@vueuse/core": "^9.6.0",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
+    "firebase": "^9.16.0",
+    "jquery": "^3.6.1",
+    "register-service-worker": "^1.7.2",
     "three": "^0.143.0",
     "vue": "^3.2.13",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue-toastification": "^2.0.0-rc.5",
+    "workbox-webpack-plugin": "^6.5.4"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.14",
+    "@types/node": "^18.11.18",
     "@types/three": "^0.143.0",
     "@types/vue-router": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "http-server": "^14.1.1",
+    "nginx": "^1.0.8",
+    "serve": "^14.1.2",
     "typescript": "~4.5.5"
   }
 }
